[package]
name = "mcp-environment"
version = "1.1.0"
edition = "2024"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
license = "Apache-2.0"
description = "Environment / Runtime MCP server for ADK-Rust Enterprise — environment registry, deployments, worker pools, and promotion gates"
repository = "https://github.com/zavora-ai/mcp-environment"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "environment", "deployment", "runtime", "enterprise"]
categories = ["development-tools"]
rust-version = "1.85"
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1.0"
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
schemars = "1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
